# caprice-lang

./: .gitignore  README.md  caprice.opam  dune  dune-project  makefile  prev.txt
caprice-language-extension/: README.md  language-configuration.json  package.json
caprice-language-extension/snippets/: caprice.json
caprice-language-extension/syntaxes/: caprice.tmLanguage.json
caprice-lsp/: .gitignore  .vscodeignore  README.md  package.json
caprice-lsp/client/src/: extension.ts
caprice-lsp/server/src/: diagnostics.ts  protocol.ts  server.ts
docs/: README.md  blue3.md  caprice.md
docs/blue3_report/: 01_intro.md  02_difference_logic.md  03_sat.md  04_smt.md  05_benchmarks_and_last_words.md  README.md  code_labels.lua  programming_blue3.md  script.py  unicode-fixes.tex
docs/res/: examples.caprice
examples/: use-wasm.cjs
examples/vite-react-wasm/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  wrangler.jsonc
examples/vite-react-wasm/scripts/: copy-wasm.mjs
examples/vite-react-wasm/src/: App.tsx  capriceWasm.ts  index.css
sandbox/: README.md  analysis.md  analysis.sql  benchmark.ml  difference_logic.ml  dune  f3.txt  main.ml  props.ml  script.ml  theory_combination.ml
sandbox/blue3_report/: 01_intro.md  02_difference_logic.md  03_sat.md  06_extras.md  an_extra_idl_case.md  bellman_ford.md  bellman_ford.ml  difference_logic.md  dune  intro.md  motivation.md  sat.md
sandbox/blue3_sandbox/: README.md  analysis.sql  benchmarks.ml  benchmarks.sql  boolean.ml  difference_logic.ml  dune  run_blue3.ml  sanity_check.ml
src-test/: ctl_ast.ml  ctl_lexer.mll  ctl_parser.mly  ctl_semantics.ml  dune  main.ml  parse_ctl.ml  position_checks.ml  preset.ml  variables.ml
src/concolic/: dune  effects.ml  errortrace.ml  eval.ml  loop.ml  monad.ml  options.ml  semantics.ml  trace_semantics.ml
src/grammar/: answer.ml  cdata.ml  cell.ml  comparator.ml  dune  eval_result.ml  input.ml  input_env.ml  logged_run.ml  path_item.ml  path_priority.ml  rev_stem.ml  step.ml  stepkey.ml  tag.ml  target.ml  target_queue.ml  val.ml
src/lang/: ast.ml  binop.ml  capriceLexerDesc.mll  capriceParserDesc.mly  caprice_lexer.mll  caprice_parser.mly  caprice_tokens.mly  dune  env.ml  funtype.ml  ident.ml  labels.ml  parser.ml  parser_param.ml  parser_state.ml  pattern.ml  record.ml  suspension.ml  value.ml  variant.ml
src/lang/features/: funtype.ml  record.ml  refinement.ml  variant.ml
src/lsp/: dune  main_loop.ml  positions.ml  print.ml  protocol.ml  range_check.ml  scheduler.ml  statement_matcher.ml  stmt_check.ml
src/overlays/: dune  typed_z3.ml  web.ml
src/parsing/: dune  lexer.mll  param.ml  parse.ml  parser.mly  tools.ml
src/sat/: cdcl.ml  cdcl.mli  dune  formula.ml  formula.mli  model.ml  model.mli  solution.ml  trail.ml  trail.mli
src/smt/: analysis.sql  benchmark_results.sql  binop.ml  blue3.ml  blue3.mli  boolean.ml  connector.ml  connector.mli  dune  euf.ml  f2.txt  formula.ml  idl.ml  idl.mli  integer.ml  integer.mli  ints.ml  ints.mli  model.ml  printer.ml  script.ml  solution.ml  solve.ml  symbol.ml  theory.ml  theory.mli
src/utils/: array_utils.ml  assertions.ml  bellman_ford.ml  bellman_ford.mli  benchmarker.ml  cell.ml  counter.ml  dune  empty.ml  identity.ml  iterables.ml  list_utils.ml  set_map.ml  time.ml  types.ml  uid.ml
src/wasm/: README.md  dummy_solver.ml  dune  main.ml
test/positions/: boolean_ops.caprice  statement_index.caprice
test/programs/: ack.caprice  bintree_fold.caprice  bintree_is_ordered.caprice  compose_list.caprice  cps_monad.caprice  cps_monad_ho_sub.caprice  cps_summate.caprice  deep_match.caprice  difference_lists.caprice  drop_value.caprice  fact.caprice  factors.caprice  fib.caprice  filter.caprice  flatten.caprice  fold_left_until.caprice  gcd_lcm.caprice  gen.caprice  hmap.caprice  is_prime.caprice  length.caprice  list_is_ordered.caprice  mapm.caprice  match_tl.caprice  merge_sort.caprice  mk_fun_type.caprice  modular_explicits.caprice  mu_hkt.caprice  mult_double.caprice  nested_rec.caprice  nonempty_map.caprice  prove_divergence.caprice  range.caprice  refinement_downcast.caprice  reverse.caprice  set_max.caprice  state_monad_dyn_arity.caprice  state_monad_result_sum.caprice  statement_list.caprice  sum_if.caprice  (+2 more)
(+375 files in other folders)
