(include_subdirs unqualified)

(ocamllex ctl_lexer)

(menhir
 (modules ctl_parser))

(library
 (name caprice_test)
 (public_name caprice.caprice_test)
 (synopsis "Caprice Test Language Definition and Semantics")
 (modules (:standard \ main))
 (libraries
  ; internal
  lang
  concolic
  ; external
  cmdliner
  alcotest
 )
 (instrumentation (backend landmarks --auto))
)

(test
 (name main)
 (modules main)
 (libraries
  ; internal
  caprice_test
  ; external
  alcotest
 )
 (action (run %{test} -q -e))
 (deps
  (source_tree ../test/)))