(include_subdirs unqualified)

(ocamllex ctl_lexer)

(menhir
 (modules ctl_parser))

(library
 (name caprice_test)
 (synopsis "Caprice Test Language Definition and Semantics")
 (modules (:standard \ main))
 (libraries
  ; internal
  lang
  concolic
  lsp
  ; external
  cmdliner
  alcotest
 )
 (instrumentation (backend landmarks --auto))
)

(test
 (name main)
 (modules main)
 (libraries
  ; internal
  caprice_test
  ; external
  alcotest
 )
 (action (run %{test} -q -e))
 (deps
  (source_tree ../test/)))